--- a/HTML/chrecter entities exc.html
+++ b/HTML/chrecter entities exc.html
@@ -8,7 +8,10 @@
         what is Newton&apos;s famous quote?
     </p>
     <p>
-        Newton's famous quote is &quot;I do not know what I may seem to the world; but
+        Newton's famous quote is &quot;I do not know what I may seem to the world; but<br>
         as for myself, I seem to have been only like a boy playing on the seashore&quot;
+    </p>
+    <p>
+        &copy;Dixith&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adithya&reg;
     </p>
 </body></html>
