changes in music player

--- a/HTML/sample sites/RAGANOVA.html
+++ b/HTML/sample sites/RAGANOVA.html
@@ -40,11 +40,11 @@
                     <p style="margin: 10px 0; color: #333;">Espresso - Sabrina Carpenter</p>
                 </div>
                 <div style="text-align: center;">
-                    <img src="\assets\images\musicplayer\i_wanna_be_yours.png" alt="Song 2" style="width: 80%; max-width: 200px; height: auto; border-radius: 10px; border: 2px solid #ddd;">
+                    <img src="assets\images\musicplayer\i_wanna_be_yours.png" alt="Song 2" style="width: 80%; max-width: 200px; height: auto; border-radius: 10px; border: 2px solid #ddd;">
                     <p style="margin: 10px 0; color: #333;">I wanna be yours - Arctic monkeys</p>
                 </div>
                 <div style="text-align: center;">
-                    <img src="\assets\images\musicplayer\Devil_is_a_lie.png" alt="Song 3" style="width: 80%; max-width: 200px; height: auto; border-radius: 10px; border: 2px solid #ddd;">
+                    <img src="assets\images\musicplayer\Devil_is_a_lie.png" alt="Song 3" style="width: 80%; max-width: 200px; height: auto; border-radius: 10px; border: 2px solid #ddd;">
                     <p style="margin: 10px 0; color: #333;">Devil is a Lie - Tommy richman</p>
                 </div>
             </div>
