--- a/HTML/pre tag.html
+++ b/HTML/pre tag.html
@@ -1,9 +1,12 @@
 
 <html>
 <head>
-  <title>My First Webpage</title>
+  <title>Pre tag</title>
 </head>
 <body>
-
+  <pre>
+    This text will be displayed in a fixed-width font
+    and will preserve any spaces or line breaks.
+  </pre>
 </body>
 </html>
